--- a/style.css
+++ b/style.css
@@ -79,16 +79,108 @@ button:hover {
   transform: scale(1.05);
 }
 
-#restart {
+#start {
   margin-top: 10px;
 }
 
-#restart button {
+#start button {
   background-color: rgba(16, 70, 154);
 }
 
-#restart button:hover {
+#start button:hover {
   background-color: rgba(52, 152, 219, 0.5);
+}
+
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.popup-content {
+  background-color: #1e293b;
+  padding: 30px;
+  border-radius: 10px;
+  text-align: center;
+  color: #e0f2fe;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+  max-width: 400px;
+  width: 90%;
+}
+
+.popup-content h2 {
+  margin-bottom: 20px;
+  font-size: 1.8rem;
+  color: #38bdf8;
+}
+
+.popup-content p {
+  margin-bottom: 10px;
+  font-size: 1rem;
+  color: #cbd5e1;
+}
+
+input,
+select {
+  margin: 10px 0px;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #64748b;
+  width: 100%;
+  background-color: #f1f5f9;
+  color: #1e293b;
+  font-size: 1rem;
+  display: block;
+}
+
+input:focus,
+select:focus {
+  outline: none;
+  border-color: #38bdf8;
+}
+
+button#popupBtn {
+  padding: 10px 20px;
+  font-size: 1rem;
+  font-weight: bold;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+  background-color: #1e40af;
+  color: #e0f2fe;
+  width: 50%;
+}
+
+button#popupBtn:hover {
+  background-color: #2563eb;
+  transform: scale(1.05);
+}
+#playerName {
+  width: 95% !important;
+}
+
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: transparent;
+  border: none;
+  font-size: 1.5rem;
+  color: #e0f2fe;
+  cursor: pointer;
+  transition: color 0.2s ease-in-out;
+}
+
+.close-btn:hover {
+  color: #38bdf8;
 }
 
 @media (max-width: 600px) {
