--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@ body {
   align-items: center;
   justify-content: flex-start;
   margin: 0;
-  padding: 20px;
+  padding: 0px 20px;
+  padding-top: 4px;
   box-sizing: border-box;
   min-height: 100vh;
   background-image: url("./797.jpg");
