add Functionality of score on each player. Description: for each player there is a score and in each win the player's score got incremented by one and got display in the player's info

--- a/style.css
+++ b/style.css
@@ -229,6 +229,12 @@ button#popupBtn:hover {
   font-size: 1rem;
 }
 
+.score {
+  font-size: 1.2rem;
+  margin-top: 10px;
+  color: #38bdf8;
+}
+
 @media (max-width: 600px) {
   #container {
     grid-template-columns: repeat(10, 25px);
