--- a/style.css
+++ b/style.css
@@ -241,3 +241,91 @@ button#popupBtn:hover {
     max-height: 60vh;
   }
 }
+
+/* Players Scores */
+.scores-menu {
+  position: fixed;
+  top: 10%;
+  left: 5%;
+  width: 320px;
+  background: linear-gradient(
+    135deg,
+    rgba(30, 41, 59, 0.95),
+    rgba(15, 23, 42, 0.95)
+  );
+  border: 2px solid #38bdf8;
+  border-radius: 12px;
+  padding: 20px;
+  color: #e0f2fe;
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.4);
+  z-index: 1000;
+  display: none;
+  overflow-y: auto;
+}
+
+.scores-menu h2 {
+  font-size: 1.6rem;
+  color: #38bdf8;
+  margin-bottom: 15px;
+  text-align: center;
+  font-weight: 600;
+}
+
+#scoresTable {
+  width: 100%;
+  border-collapse: collapse;
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+#scoresTable th,
+#scoresTable td {
+  padding: 12px;
+  border: 1px solid #64748b;
+  text-align: left;
+}
+
+#scoresTable th {
+  background-color: rgba(16, 70, 154, 0.8);
+  color: #e0f2fe;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+#scoresTable td {
+  background-color: rgba(178, 237, 251, 0.3);
+}
+
+.closes-btn {
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  background-color: transparent;
+  border: none;
+  font-size: 1.5rem;
+  color: #e0f2fe;
+  cursor: pointer;
+  transition: color 0.3s ease-in-out;
+}
+
+.closes-btn:hover {
+  color: #38bdf8;
+}
+
+#showScoresBtn {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1rem;
+  z-index: 1001;
+  transition: background-color 0.3s ease-in-out;
+}
+
+#showScoresBtn:hover {
+  background-color: #0ea5e9;
+}
