--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
 .cell {
   width: 25px;
   height: 25px;
-  background-color: rgba(178, 237, 251, 0.6);
+  background-color: #b2edfb99;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -77,7 +77,7 @@ button {
   border-radius: 5px;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
-  background-color: rgba(16, 70, 154);
+  background-color: #10469a;
   color: #e0f2fe;
 }
 
@@ -315,7 +315,7 @@ button#popupBtn:hover {
 #showScoresBtn {
   position: fixed;
   top: 20px;
-  right: 20px;
+  right: 70px;
   color: white;
   padding: 10px 20px;
   border: none;
